--- a/hammers/brew/brewfile.org
+++ b/hammers/brew/brewfile.org
@@ -144,6 +144,11 @@
       cask 'handbrake', greedy: true  # 视屏压缩
     #+END_SRC
 
+*** compile emacs
+    #+BEGIN_SRC conf :tangle (m/resolve "${m/home.d}/.Brewfile") :exports code :results none :eval never :comments link
+      brew 'texinfo'
+    #+END_SRC
+    
 *** emacs email package
     #+BEGIN_SRC conf :tangle (m/resolve "${m/home.d}/.Brewfile") :exports code :results none :eval never :comments link
       brew 'isync'
