feat: enable the global undo tree mode

--- a/hammers/emacs/editing.org
+++ b/hammers/emacs/editing.org
@@ -105,6 +105,7 @@
 	:ensure t
 	:config
 	;; autosave the undo-tree history
+	(global-undo-tree-mode)
 	(setq undo-tree-history-directory-alist
 	      `((".*" . ,temporary-file-directory)))
 	(setq undo-tree-auto-save-history t))
