feat: refactor number increment

--- a/hammers/emacs/editing.org
+++ b/hammers/emacs/editing.org
@@ -504,70 +504,44 @@
      (defun m/increment-number-hexadecimal (&optional arg base)
        "Increment the number forward from point by 'arg'."
        (interactive "P")
-
        (save-excursion
 	 (save-match-data
-	   (let (inc-by field-width answer hex-format hex-en repeat-cnt prompt base skipchars regx)
-	     (setq inc-by 1)
-	     (setq repeat-cnt 1)
-	     (setq base 10)
-	     (setq skipchars "0123456789")
-	     (setq regx "\\([0-9]+\\)")
-	     (cond
-	      ((listp arg) (cond
-			    ((eq (car arg) 4)  (progn
-						 (setq hex-en nil)
-						 (setq prompt "number:")
-						 (setq base 10)
-						 (setq skipchars "0123456789")
-						 (setq regx "\\([0-9]+\\)")
-						 (setq inc-by (string-to-number (read-string prompt) base))
-						 (setq repeat-cnt (string-to-number (read-string "repeat:")))
-						 (skip-chars-backward skipchars)
-						 (re-search-forward regx nil t)
+	   (let* ((cursor (point))
+		  (eol (point-at-eol))
+		  (step 1)
+		  (repeat 1)
+		  (hex-number-re "\\(0[xX]\\)\\([0-9A-Fa-f]+\\)")
+		  (decimal-number-re "\\([0-9]+\\)")
+		  )
+	     (let* ((hex-point (progn (goto-char cursor)
+				      (re-search-forward hex-number-re nil t)
+				      (match-beginning 0)))
+		    (decimal-point (progn (goto-char cursor)
+					  (re-search-forward decimal-number-re nil t)
+					  (match-beginning 0))))
+	       (if (or hex-point decimal-point)
+		   (let* ((first-number (min (or hex-point eol) (or decimal-point eol)))
+			  (hex-enable (eq hex-point first-number))
+			  (base (if hex-enable 16 10)))
+		     (if hex-enable
+			 (progn
+			   (goto-char cursor)
+			   (re-search-forward hex-number-re nil t)
+			   (message "point %d" (point))
+			   (let* ((number-length (length (match-string 2)))
+				  (answer (+ (string-to-number (match-string 2) base) (* step repeat))))
+			     (replace-match (format (if hex-enable (concat (match-string 1) "%0" (int-to-string number-length)
+									   "X") (concat "%0" (int-to-string number-length)
+											"d")) answer))
+			     (message "point after replace %d" (point))
+			     )
+			   )
+		       (progn
+			 (message "xxx")))
+		     )
+		 ))))))
 
-						 ))
-			    ((eq (car arg) 16)  (progn
-						  (setq hex-en t)
-						  (setq prompt "hex:")
-						  (setq base 16)
-						  (setq skipchars "0123456789abcdefABCDEF")
-						  (setq regx "\\(0[xX]\\)\\([0-9a-fA-F]+\\)")
-						  (setq inc-by (string-to-number (read-string prompt) base))
-						  (setq repeat-cnt (string-to-number (read-string "repeat:")))
-						  (skip-chars-backward skipchars)
-						  (re-search-forward regx nil t)))))
-	      ((numberp arg) (progn
-			       (setq hex-en nil)
-			       (setq prompt ":")
-			       (setq base 10)
-			       (setq skipchars "0123456789")
-			       (setq regx "\\([0-9]+\\)")
-			       (setq inc-by arg)
-			       (setq repeat-cnt 1)))
-	      ((eq arg '-) (progn
-			     (setq hex-en nil)
-			     (setq prompt ":")
-			     (setq base 10)
-			     (setq skipchars "0123456789")
-			     (setq regx "\\([0-9]+\\)")
-			     (setq inc-by -1)
-			     (setq repeat-cnt 1))))
-	     (skip-chars-backward skipchars)
-	     (let* ((group (if hex-en 2 1)))
-	       (when (re-search-forward regx nil t)
-		 (setq field-width (length (match-string group)))
-		 (setq answer (+ (string-to-number (match-string group) base) (* repeat-cnt inc-by)))
-		 (when (< answer 0)
-		   (setq answer (+ (expt 16 field-width) answer)))
-		 (if (equal (match-string 0) (upcase (match-string 0)))
-		     (setq hex-format "X")
-		   (setq hex-format "x"))
-		 (replace-match (format (if hex-en (concat "%0" (int-to-string field-width)
-							   hex-format) (concat "%0" (int-to-string field-width)
-							   "d")) answer))))))))
-
-       (global-set-key (kbd "C-c +") 'm/increment-number-hexadecimal)
+     (global-set-key (kbd "C-c +") 'm/increment-number-hexadecimal)
    #+END_SRC
 
 ** 其他
