Revert "refactor: change after to requires"
This reverts commit ac540c5e8982cbb337e12c0b4dd549b23109531b.

--- a/hammers/emacs/completion.org
+++ b/hammers/emacs/completion.org
@@ -62,7 +62,8 @@
      (use-package yasnippet
        :config
        (use-package yasnippet-snippets
-	 :requires (company yasnippet)
+	 :requires yasnippet
+	 :after company
 	 :preface
 	 (defvar company-mode/enable-yas t
 	   "Enable yasnippet for all backends.")
