--- a/hammers/emacs/email.org
+++ b/hammers/emacs/email.org
@@ -88,7 +88,7 @@
       SSLType IMAPS
       AuthMechs PLAIN
       #PassCmd "security find-generic-password -s lambda -w"
-      PassCmd "cat ~/.authinfo|grep rising.lambda@gmail.com|awk '{print $6}'"
+      PassCmd "gpg --for-your-eyes-only --no-tty -qd ~/.authinfo.gpg |grep rising.lambda@gmail.com|awk '{print $6}'"
       # To rotate:
       # > security delete-generic-password -s mbsync-gandi-password
       # > security add-generic-password -a stig@brautaset.org -s mbsync-gandi-password -w APP-SPECIFIC-PASSWORD
@@ -114,7 +114,7 @@
       User neo@sietium.com
       SSLType IMAPS
       AuthMechs LOGIN
-      PassCmd "cat ~/.authinfo|grep neo@sietium.com|awk '{print $6}'"
+      PassCmd "gpg --for-your-eyes-only --no-tty -qd ~/.authinfo.gpg | grep neo@sietium.com | awk '{print $6}'"
       #PassCmd "security find-generic-password -s lambda -w"
 
       # To rotate:
@@ -144,7 +144,7 @@
       SSLType IMAPS
       SSLVersions TLSv1.2
       AuthMechs LOGIN
-      PassCmd "cat ~/.authinfo|grep sjkyspa@qq.com|awk '{print $6}'"
+      PassCmd "gpg --for-your-eyes-only --no-tty -qd ~/.authinfo.gpg | grep sjkyspa@qq.com | awk '{print $6}'"
       # To rotate:
       # > security delete-generic-password -s mbsync-gandi-password
       # > security add-generic-password -a stig@brautaset.org -s mbsync-gandi-password -w APP-SPECIFIC-PASSWORD
@@ -166,7 +166,6 @@
       Patterns INBOX Travel Archive Sent Spam Trash
     #+END_SRC
 
-    
 *** notmuch 配置文件
     #+BEGIN_SRC conf :eval never :exports code :tangle (m/resolve "${m/home.d}/.notmuch-config")
       # 相对于 HOMEDIR ~ 的目录
@@ -210,7 +209,6 @@
       passwordeval cat ~/.authinfo|grep rising.lambda@gmail.com|awk '{print $6}'
     #+END_SRC
 
-    
 *** emacs 发送端配置
     #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/conf.d}/lisp/init-email.el") :comments link
       (setq message-send-mail-function 'message-send-mail-with-sendmail
