--- a/hammers/emacs/literate.org
+++ b/hammers/emacs/literate.org
@@ -406,7 +406,7 @@
 	    :tree-type week)
 	   ("m" "meeting note" plain (file+olp+datetree ,(expand-file-name "meeting.org" org-agenda-dir))
 	    ,(concat "%[" (expand-file-name "meeting.tmpl" org-agenda-dir) "]")
-	    :tree-type week :clock-in 1 :empty-lines 1 :kill-buffer 1)
+	    :tree-type week :empty-lines 1 :kill-buffer 1)
 	   ("i" "interrupt task" entry
 	    (file ,(expand-file-name "inbox.org" org-agenda-dir))
 	    "* NEXT %^{what has interrupted?}" :clock-in 1 :clock-keep 1)
