feat: add ascii mode

--- a/hammers/emacs/languages.org
+++ b/hammers/emacs/languages.org
@@ -79,6 +79,13 @@
 	:hook
 	(meson-mode . company-mode))
     #+END_SRC
+    
+*** adoc mode
+    #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/conf.d}/lisp/init-languages.el") :comments link
+      (use-package adoc-mode
+	:config
+	(add-to-list 'auto-mode-alist '("\\.adoc\\'" . adoc-mode)))
+    #+END_SRC
 *** provide
     #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/conf.d}/lisp/init-languages.el") :comments link
       (provide 'init-languages)
