--- a/hammers/emacs/literate.org
+++ b/hammers/emacs/literate.org
@@ -426,6 +426,115 @@
 	    "- %A\n"
 	    :immediate t :prepend t))))
     #+END_SRC
+*** org-mode capture command line support
+    #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/conf.d}/lisp/init-literate.el") :comments link
+      (defmacro letf! (bindings &rest body)
+	"Temporarily rebind function, macros, and advice in BODY.
+      Intended as syntax sugar for `cl-letf', `cl-labels', `cl-macrolet', and
+      temporary advice.
+      BINDINGS is either:
+	A list of, or a single, `defun', `defun*', `defmacro', or `defadvice' forms.
+	A list of (PLACE VALUE) bindings as `cl-letf*' would accept.
+      TYPE is one of:
+	`defun' (uses `cl-letf')
+	`defun*' (uses `cl-labels'; allows recursive references),
+	`defmacro' (uses `cl-macrolet')
+	`defadvice' (uses `defadvice!' before BODY, then `undefadvice!' after)
+      NAME, ARGLIST, and BODY are the same as `defun', `defun*', `defmacro', and
+      `defadvice!', respectively.
+      \(fn ((TYPE NAME ARGLIST &rest BODY) ...) BODY...)"
+	(declare (indent defun))
+	(setq body (macroexp-progn body))
+	(when (memq (car bindings) '(defun defun* defmacro defadvice))
+	  (setq bindings (list bindings)))
+	(dolist (binding (reverse bindings) body)
+	  (let ((type (car binding))
+		(rest (cdr binding)))
+	    (setq
+	     body (pcase type
+		    (`defmacro `(cl-macrolet ((,@rest)) ,body))
+		    (`defadvice `(progn (defadvice! ,@rest)
+					(unwind-protect ,body (undefadvice! ,@rest))))
+		    ((or `defun `defun*)
+		     `(cl-letf ((,(car rest) (symbol-function #',(car rest))))
+			(ignore ,(car rest))
+			,(if (eq type 'defun*)
+			     `(cl-labels ((,@rest)) ,body)
+			   `(cl-letf (((symbol-function #',(car rest))
+				       (fn! ,(cadr rest) ,@(cddr rest))))
+			      ,body))))
+		    (_
+		     (when (eq (car-safe type) 'function)
+		       (setq type (list 'symbol-function type)))
+		     (list 'cl-letf (list (cons type rest)) body)))))))
+
+      (defvar org-capture-initial)
+
+      ;;;###autoload
+      (defvar fallback-buffer-name "*scratch*"
+	"The name of the buffer to fall back to if no other buffers exist (will create
+      it if it doesn't exist).")
+
+      ;;;###autoload
+      (defun fallback-buffer ()
+	"Returns the fallback buffer, creating it if necessary. By default this is the
+      scratch buffer. See `doom-fallback-buffer-name' to change this."
+	(let (buffer-list-update-hook)
+	  (get-buffer-create fallback-buffer-name)))
+
+      (defvar +org-capture-fn #'org-capture
+	"Command to use to initiate org-capture.")
+
+      ;;;###autoload
+      (defvar +org-capture-frame-parameters
+	`((name . "org-capture")
+	  (width . 70)
+	  (height . 25)
+	  (transient . t)
+	  ,(when (and (eq m/os 'linux) (not (getenv "DISPLAY")))
+	     `(display . ":0"))
+	  ,(if (eq m/os 'macos) '(menu-bar-lines . 1)))
+	"TODO")
+
+      ;;;###autoload
+      (defun +org-capture-frame-p (&rest _)
+	"Return t if the current frame is an org-capture frame opened by
+      `+org-capture/open-frame'."
+	(and (equal (alist-get 'name +org-capture-frame-parameters)
+		    (frame-parameter nil 'name))
+	     (frame-parameter nil 'transient)))
+
+      ;;;###autoload
+      (defun m/org-capture-open-frame (&optional initial-input key)
+	"Opens the org-capture window in a floating frame that cleans itself up once
+      you're done. This can be called from an external shell script."
+	(interactive)
+	(when (and initial-input (string-empty-p initial-input))
+	  (setq initial-input nil))
+	(when (and key (string-empty-p key))
+	  (setq key nil))
+	(let* ((frame-title-format "")
+	       (frame (if (+org-capture-frame-p)
+			  (selected-frame)
+			(make-frame +org-capture-frame-parameters))))
+	  (select-frame-set-input-focus frame)  ; fix MacOS not focusing new frames
+	  (with-selected-frame frame
+	    (require 'org-capture)
+	    (condition-case ex
+		(letf! ((#'pop-to-buffer #'switch-to-buffer)
+			(capture-frame frame))
+		  ;; (switch-to-buffer (fallback-buffer))
+		  (delete-frame frame)
+		  (let ((org-capture-initial initial-input)
+			org-capture-entry)
+		    (when (and key (not (string-empty-p key)))
+		      (setq org-capture-entry (org-capture-select-template key)))
+		    (funcall +org-capture-fn)))
+	      ('error
+	       (message "org-capture: %s" (error-message-string ex))
+	       (delete-frame frame))))))
+
+    #+END_SRC
 *** org-mode capture command line tool
     #+BEGIN_SRC shell :eval never :exports code :tangle (m/resolve "${m/conf.d}/bin/capture") :tangle-mode (identity #o755) :comments link :noweb yes
       #!/usr/bin/env sh
